--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/common.mixin.scss",
               "src/variables.scss",
               "src/styles.scss"
             ],
