--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~9.1.9",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ngmodule/material-carousel": "^0.6.0",
     "bootstrap": "^4.5.0",
+    "ngx-image-cropper": "^3.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
