--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.25",
     "mongoose-unique-validator": "^2.0.3",
